--- a/zh.wikipedia.org/位元深度_(音訊).wikitext
+++ b/zh.wikipedia.org/位元深度_(音訊).wikitext
@@ -2,7 +2,7 @@
     comment = #Please do not remove this struct. It's record contains some important information of edit. This struct will be removed automatically after you push edits.#
     pageTitle = #位元深度 (音訊)#
     pageID = #7740282#
-    revisionID = #68961517#
+    revisionID = #70416900#
     contentModel = #wikitext#
     contentFormat = #text/x-wiki#
 [END_PAGE_INFO] --%>
@@ -61,6 +61,8 @@
 <math>\mathrm{SQNR}=20\log_{10}(2^{Q})\approx6.02\cdot{}Q\ \mathrm{dB}</math>
 
 此處的{{lang|en|Q}}為訊號的量化位元數，解果以分貝（{{lang-en|dB}}）為單位。<ref name="taking_the_mystery_out_of_infamous_formula"/>
+
+由此可知，[[CD]]上的16位元數位音訊的最大理論訊噪比為96分貝，而專業的24位元數位音訊的最大理論訊噪比可至144分貝。至2011為止，由於[[積體電路]]的實際設計限制，數位音訊轉換器的訊噪比大約只能達到123分貝，<ref name="nwavguy_noise_dynamic_range"/><ref name="pcm4222"/><ref name="wmb741_cirrus_logic"/>也就是相當於{{tsl|en|Effective number of bits|有效位元數|有效}}21位元，不過這也與人類的[[聽覺系統]]能力相近。<ref name="aspects_of_human_hearing"/><ref name="sensitivity_of_human_ear"/>雖然說也有售賣的32位元轉換器，但這些基本純粹是營銷產物，和24位轉換器比起來沒有任何實際好處，那些多出來的位元要麼一直是0，要麼只能編碼噪聲。<ref name="the_great_audio_myth"/><ref name="32_bit_capable_dacs"/>另外也可以用多個轉換器覆蓋處理同一訊號的不同範圍，如此一來就可以在訊號的長期範圍紀錄更大的動態範圍，這種技術稱作動態範圍拓展，不過這仍在短期範圍會有受限於單個轉換器動態範圍的問題。<ref name="multiple_adc"/><ref name="dynamic_range_extension"/>
 
 {| class="wikitable"
 |+ 各种位元深度所对应的訊號雜訊比及解析度
@@ -172,18 +174,16 @@
 <ref name="wave_file_specifications">{{Cite web|title=Wave File Specifications|url=http://www-mmsp.ece.mcgill.ca/Documents/AudioFormats/WAVE/WAVE.html|access-date=2021-12-29|work=www-mmsp.ece.mcgill.ca}}</ref>
 <ref name="aiff_aifc_sound_file_specifications">{{Cite web|title=AIFF / AIFC Sound File Specifications|url=http://www-mmsp.ece.mcgill.ca/Documents/AudioFormats/AIFF/AIFF.html|access-date=2021-12-29|work=www-mmsp.ece.mcgill.ca}}</ref><!--8-->
 <ref name="float_point">{{Cite web|title=Floating Point (Real Numbers)|url=http://www.dspguide.com/ch4/3.htm|access-date=2021-12-29|work=www.dspguide.com}}</ref>
-<ref name="taking_the_mystery_out_of_infamous_formula">{{cite web |url=http://www.analog.com/static/imported-files/tutorials/MT-001.pdf |title=Taking the Mystery out of the Infamous Formula, "SNR = 6.02N + 1.76dB," and Why You Should Care |first=Walt |last=Kester |publisher=[[Analog Devices]]|year=2007|access-date=2021-12-29}}</ref>
-<!--TODO:-->
+<ref name="taking_the_mystery_out_of_infamous_formula">{{cite web |url=http://www.analog.com/static/imported-files/tutorials/MT-001.pdf |title=Taking the Mystery out of the Infamous Formula, "SNR = 6.02N + 1.76dB," and Why You Should Care |first=Walt |last=Kester |publisher=Analog Devices|year=2007|access-date=2021-12-29}}</ref>
 <ref name="nwavguy_noise_dynamic_range">{{Cite web|title=NwAvGuy: Noise & Dynamic Range|url=http://nwavguy.blogspot.com/2011/09/noise-dynamic-range.html|access-date=2021-12-29|date=2011-09-06|last=Nwavguy|work=NwAvGuy}}</ref>
 <ref name="pcm4222">{{cite web |url=http://focus.ti.com/docs/prod/folders/print/pcm4222.html |title=PCM4222 |quote=Dynamic Range (–60dB input, A-weighted): 124dB typical Dynamic Range (–60dB input, 20&nbsp;kHz Bandwidth): 122dB typical |access-date=2021-12-29}}</ref>
 <ref name="wmb741_cirrus_logic">{{Cite web|title=WM8741 {{!}} Cirrus Logic|url=https://master-nq.webp2.cirrus.com/products/wm8741/|access-date=2021-12-29|work=master-nq.webp2.cirrus.com}}</ref><!--14-->
 <ref name="the_great_audio_myth">{{Cite web|title=The great audio myth: why you don’t need that 32-bit DAC|url=https://www.androidauthority.com/why-you-dont-want-that-32-bit-dac-667621/|access-date=2021-12-29|date=2016-01-19|work=Android Authority}}</ref>
 <ref name="32_bit_capable_dacs">{{Cite web|title=32-bit capable DACs|url=https://hydrogenaud.io/index.php/topic,95159.0.html|access-date=2021-12-29|work=hydrogenaud.io}}</ref><!--16-->
-<ref name="aspects_of_human_hearing">{{cite web |url=http://media.paisley.ac.uk/~campbell/AASP/Aspects%20of%20Human%20Hearing.PDF |title=Aspects of Human Hearing |author=D. R. Campbell |quote=The dynamic range of human hearing is [approximately] 120&nbsp;dB |access-date=2011-04-21 |url-status=dead |archive-url=https://web.archive.org/web/20110821051130/http://media.paisley.ac.uk/~campbell/AASP/Aspects%20of%20Human%20Hearing.PDF |archive-date=2011-08-21|df=dmy}}</ref>
+<ref name="aspects_of_human_hearing">{{cite web |url=http://media.paisley.ac.uk/~campbell/AASP/Aspects%20of%20Human%20Hearing.PDF |title=Aspects of Human Hearing |author=D. R. Campbell |quote=The dynamic range of human hearing is [approximately] 120&nbsp;dB |access-date=2011-04-21 |url-status=dead |archive-url=https://web.archive.org/web/20110821051130/http://media.paisley.ac.uk/~campbell/AASP/Aspects%20of%20Human%20Hearing.PDF |archive-date=2011-08-21}}</ref>
 <ref name="sensitivity_of_human_ear">{{Cite web|title=Sensitivity of Human Ear|url=http://hyperphysics.phy-astr.gsu.edu/hbase/Sound/earsens.html|access-date=2021-12-29|work=hyperphysics.phy-astr.gsu.edu|archive-url=https://web.archive.org/web/20110604105752/http://hyperphysics.phy-astr.gsu.edu/hbase/sound/earsens.html |archive-date=2011-06-04|url-status=live}}</ref><!--18-->
 <ref name="multiple_adc">{{Citation|title=Multiple A to D converters for enhanced dynamic range|url=https://patents.google.com/patent/US6317065B1/en|date=2001-11-13|accessdate=2021-12-29|patent-number=US6317065B1|inventor-first=Gregory G.|inventor-last=Raleigh|inventor2-first=Vincent K.|inventor2-last=Jones}}</ref>
 <ref name="dynamic_range_extension">{{Cite journal|last1=Christodoulou|first1=Lakis|last2=Lane|first2=John|last3=Kasparis|first3=Takis|date=2010-03-01|title=Dynamic range extension using multiple A/D converters|journal=2010 4th International Symposium on Communications, Control and Signal Processing (ISCCSP)|pages=1–4|doi=10.1109/ISCCSP.2010.5463427|isbn=978-1-4244-6285-8|s2cid=16501096}}</ref><!--20-->
-<!--ENDTODO:-->
 <ref name="fixed_versus_floating_point">{{Cite web|title=Fixed versus Floating Point|url=http://www.dspguide.com/ch28/4.htm|access-date=2021-12-29|work=www.dspguide.com}}</ref>
 <ref name="48_bit_interger_processing_beats">{{cite web|url=http://www.jamminpower.com/PDF/48-bit%20Audio.pdf|title=48-Bit Integer Processing Beats 32-Bit Floating-Point for Professional Audio Applications|author=Moorer, James|date=1999-09|website=www.jamminpower.com|access-date=2013-08-12}}</ref>
 <ref name="word_relation">{{cite web |url=http://www.analog.com/en/content/relationship_data_word_size_dynamic_range/fca.html |title=Relationship of Data Word Size to Dynamic Range and Signal Quality in Digital Audio Processing Applications |author=Tomarakos, John |publisher=[[亚德诺半导体]]|website=www.analog.com |access-date=2021-12-29|language=en}}</ref><!--23-->
@@ -191,8 +191,8 @@
 <ref name="the_scientist_and_enginners_guide">{{Cite web|title=The Scientist and Engineer's Guide to Digital Signal Processing, Chapter 4 – DSP Software / Number Precision|url=http://www.dspguide.com/ch4/4.htm|access-date=2021-12-29|work=www.dspguide.com}}</ref>
 <ref name="determining_appropriart_precisions">{{cite journal|last=Carletta|first=Joan|title=Determining Appropriate Precisions for Signals in Fixed-Point IIR Filters|journal=DAC|year=2003|citeseerx=10.1.1.92.1266</ref><!--26-->
 <ref name="choosing_a_high_performance_audio_dac">{{Cite web|title=Choosing a high-performance audio ADC|url=http://skywired.net/blog/2011/09/choosing-high-performance-audio-adc/|access-date=2021-12-29|date=2011-09-14|last=Trier|first=Author Stephen|work=Skywired.net|language=en-US}}</ref>
-<ref name="24_192_music_download">{{cite web |url=https://www.xiph.org/~xiphmont/demo/neil-young.html |title=24/192 Music Downloads ...and why they make no sense |last=Montgomery |first=Chris |author-link=Chris Montgomery |date=2012-03-25 |website=xiph.org |access-date=2013-05-26 |quote=With use of shaped dither, which moves quantization noise energy into frequencies where it's harder to hear, the effective dynamic range of 16 bit audio reaches 120dB in practice, more than fifteen times deeper than the 96dB claim. 120dB is greater than the difference between a mosquito somewhere in the same room and a jackhammer a foot away.... or the difference between a deserted 'soundproof' room and a sound loud enough to cause hearing damage in seconds. 16 bits is enough to store all we can hear, and will be enough forever. |archive-url=https://web.archive.org/web/20130707161555/http://xiph.org/~xiphmont/demo/neil-young.html |archive-date=July 2013-07-07 |url-status=dead|language=en}}</ref>
-<ref name="coding_high_quality_digital_audio">{{Cite web |url=https://www.meridian-audio.com/meridian-uploads/ara/coding2.pdf |title=Coding High Quality Digital Audio |last=Stuart |first=J. Robert |date=1997 |publisher=Meridian Audio Ltd |access-date=2016-02-25 |quote=One of the great discoveries in PCM was that, by adding a small random noise (that we call dither) the truncation effect can disappear. Even more important was the realisation that there is a ''right'' sort of random noise to add, and that when the right dither is used, the resolution of the digital system becomes ''infinite''. |archive-url=https://web.archive.org/web/20160407163817/https://www.meridian-audio.com/meridian-uploads/ara/coding2.pdf |archive-date=2016-04-07 |url-status=dead |df=dmy-all |language=en}}</ref><!--29-->
+<ref name="24_192_music_download">{{cite web |url=https://www.xiph.org/~xiphmont/demo/neil-young.html |title=24/192 Music Downloads ...and why they make no sense |last=Montgomery |first=Chris |date=2012-03-25 |website=xiph.org |access-date=2013-05-26 |quote=With use of shaped dither, which moves quantization noise energy into frequencies where it's harder to hear, the effective dynamic range of 16 bit audio reaches 120dB in practice, more than fifteen times deeper than the 96dB claim. 120dB is greater than the difference between a mosquito somewhere in the same room and a jackhammer a foot away.... or the difference between a deserted 'soundproof' room and a sound loud enough to cause hearing damage in seconds. 16 bits is enough to store all we can hear, and will be enough forever. |archive-url=https://web.archive.org/web/20130707161555/http://xiph.org/~xiphmont/demo/neil-young.html |archive-date=July 2013-07-07 |url-status=dead|language=en}}</ref>
+<ref name="coding_high_quality_digital_audio">{{Cite web |url=https://www.meridian-audio.com/meridian-uploads/ara/coding2.pdf |title=Coding High Quality Digital Audio |last=Stuart |first=J. Robert |date=1997 |publisher=Meridian Audio Ltd |access-date=2016-02-25 |quote=One of the great discoveries in PCM was that, by adding a small random noise (that we call dither) the truncation effect can disappear. Even more important was the realisation that there is a ''right'' sort of random noise to add, and that when the right dither is used, the resolution of the digital system becomes ''infinite''. |archive-url=https://web.archive.org/web/20160407163817/https://www.meridian-audio.com/meridian-uploads/ara/coding2.pdf |archive-date=2016-04-07 |url-status=dead |language=en}}</ref><!--29-->
 <ref name="dithering_in_adc">{{cite web |url=http://www.e2v.com/assets/media/files/documents/broadband-data-converters/doc0869B.pdf |title=Dithering in Analog-to-Digital Conversion |publisher=e2v Semiconductors |year=2007 |access-date=2011-07-26 |archive-url=https://web.archive.org/web/20111004205321/http://www.e2v.com/assets/media/files/documents/broadband-data-converters/doc0869B.pdf |archive-date=2011-10-04 |url-status=dead }}</ref>
 <ref name="oversanpling_interpolating_dacs">{{cite web |last=Kester |first=Walt |title=Oversampling Interpolating DACs |url=http://www.analog.com/static/imported-files/tutorials/MT-017.pdf |publisher=Analog Devices |access-date=2013-08-19|url-status=dead}}</ref>
 <ref name="philips_research">{{Cite web|title=Philips Research|url=https://www.philips.com/a-w/about/innovation/research.html|access-date=2021-12-29|work=Philips|language=en}}</ref>
