--- a/zh.wikipedia.org/一望而知.wikitext
+++ b/zh.wikipedia.org/一望而知.wikitext
@@ -1,3 +1,3 @@
 熟語「一望而知」或者說「當我一看到我就知道了」（{{lang-en|I know it when I see it}}）是指在事物缺乏明確的定義及屬性時，仍人試圖在這種情形下對其分類的一種方式。
 
-這種表述至少自19世紀起這就已經算常見了。與此類似的短語有出現在[[亞瑟·柯南·道爾]]所著的小說《[[巴斯克維爾的獵犬]]》之中。在故事中，故事角色[[歇洛克·福爾摩斯]]在
+這種表述至少自19世紀起就已經算常見了。與此類似的短語有出現在[[亞瑟·柯南·道爾]]所著的小說《[[巴斯克維爾的獵犬]]》之中。在故事中，故事角色[[歇洛克·福爾摩斯]]在評價畫作時說：「我一看我就知道（這些畫作）好在哪兒，並且現在就看出來了」。
